--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,21 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: #f1f1f1;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background: #f1f1f1;
+    box-sizing: border-box;
+}
+
+input, button {
+    outline: none;
+}
+
+
+input[type=button]:hover,
+input[type=submit]:hover,
+input[type=checkbox]:hover,
+input[type=radio]:hover,
+button:hover,
+a:hover {
+    cursor: pointer;
 }
